# my-rust-sandbox-2025

./: Cargo.toml  my_data.txt
src/: lib.rs  main.rs  my_string.rs
src/calc/: calc_lib.rs  division.rs  fizzbuzz.rs  mod.rs
src/guess_game/: guess_game1.rs  guess_game2.rs  guess_game3.rs  guess_game4.rs  guess_game5.rs  mod.rs
src/io_utils/: mod.rs  my_file_control.rs  my_file_control2.rs  my_file_control3.rs  my_file_control4.rs
src/structure/: rectangle.rs
